--- a/static/landing/index.html
+++ b/static/landing/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BrandInsight - AI-Powered Market Research & Trend Analysis</title>
+    <title>BrandInsight</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
@@ -1242,7 +1242,7 @@
                 </div>
                 <div class="auth-buttons">
                     <a href="/static/landing/login.html" class="btn btn-secondary">Login</a>
-                    <a href="http://localhost:5173/AdminLogin" class="btn btn-primary">Admin</a>
+                    <a href="https://brandinsightai.vercel.app/AdminLogin" class="btn btn-primary">Admin</a>
                 </div>
                 <button class="mobile-menu-btn">
                     <i class="fas fa-bars"></i>
