--- a/static/landing/login.html
+++ b/static/landing/login.html
@@ -1314,7 +1314,7 @@
                 LoadingOverlay.show('Signing you in...');
 
                 try {
-                    const response = await fetch('http://127.0.0.1:8000/login', {
+                    const response = await fetch('https://backend-fastapi-0t1u.onrender.com/login', {
                         method: 'POST',
                         headers: { 'Content-Type': 'application/json' },
                         body: JSON.stringify({ email, password })
@@ -1327,7 +1327,7 @@
 
                         // Add a small delay before redirecting for better UX
                         setTimeout(() => {
-                            window.location.href = "http://localhost:5173/";
+                            window.location.href = "https://brandinsightai.vercel.app/dashboard";
                         }, 1500);
                     } else {
                         Toast.show(data.detail || "Invalid email or password", 'error', 'Login Failed');
@@ -1381,7 +1381,7 @@
                 LoadingOverlay.show('Creating your account...');
 
                 try {
-                    const response = await fetch('http://127.0.0.1:8000/signup', {
+                    const response = await fetch('https://backend-fastapi-0t1u.onrender.com/signup', {
                         method: 'POST',
                         headers: { 'Content-Type': 'application/json' },
                         body: JSON.stringify({ name, email, company, password })
