--- a/static/landing/login.html
+++ b/static/landing/login.html
@@ -1314,7 +1314,7 @@
                 LoadingOverlay.show('Signing you in...');
 
                 try {
-                    const response = await fetch('https://backend-fastapi-0t1u.onrender.com/login', {
+                    const response = await fetch('https://https://backend-fastapi-mz7v.onrender.com//login', {
                         method: 'POST',
                         headers: { 'Content-Type': 'application/json' },
                         body: JSON.stringify({ email, password })
@@ -1381,7 +1381,7 @@
                 LoadingOverlay.show('Creating your account...');
 
                 try {
-                    const response = await fetch('https://backend-fastapi-0t1u.onrender.com/signup', {
+                    const response = await fetch('https://https://backend-fastapi-mz7v.onrender.com//signup', {
                         method: 'POST',
                         headers: { 'Content-Type': 'application/json' },
                         body: JSON.stringify({ name, email, company, password })
