--- a/static/landing/index.html
+++ b/static/landing/index.html
@@ -1241,7 +1241,7 @@
                     <a href="#contact">Contact</a>
                 </div>
                 <div class="auth-buttons">
-                    <a href="/static/landing/login.html" class="btn btn-secondary">Login</a>
+                    <a href="/api/static/landing/login.html" class="btn btn-secondary">Login</a>
                     <a href="https://brandinsightai.vercel.app/AdminLogin" class="btn btn-primary">Admin</a>
                 </div>
                 <button class="mobile-menu-btn">
@@ -1265,7 +1265,7 @@
                     <p>Automate data collection, detect trends, analyze sentiment, and forecast market demand with our
                         intelligent platform. Make data-driven decisions faster and more accurately.</p>
                     <div class="hero-buttons">
-                        <a href="/static/landing/login.html?action=signup" class="btn btn-primary btn-large pulse">Start
+                        <a href="/api/static/landing/login.html?action=signup" class="btn btn-primary btn-large pulse">Start
                             Now</a>
                     </div>
                     <div class="hero-stats">
