--- a/static/landing/login.html
+++ b/static/landing/login.html
@@ -1389,7 +1389,7 @@
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     credentials: 'include',
-                    body: JSON.stringify({ email, password })
+                    body: JSON.stringify({ name, email, password, company })
                   });
 
 
